--- a/privacy.html
+++ b/privacy.html
@@ -122,8 +122,8 @@
             If you have any questions about this Privacy Policy, or suggestions for the extension, please contact us:
         </p>
         <p>
-            [Your Name or Extension Name]<br>
-            Email: [Your Support Email Address]<br>
+            Swayam Bhageria<br>
+            Email: bhageriaswayam@gmail.com<br>
             GitHub Issues Page: [Link to Your GitHub Repository Issues Page]
         </p>
         <p><a href="index.html" class="back-link">&larr; Back to Home</a></p>
