--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 This extension is open source! You can view the code, report issues, or contribute
                 on GitHub.
             </p>
-            <a href="GITHUB_REPOSITORY_LINK_HERE" class="cta-button github" target="_blank" rel="noopener noreferrer">View on GitHub</a>
+            <a href="https://github.com/SwayamBhageria/Release-Reminder" class="cta-button github" target="_blank" rel="noopener noreferrer">View on GitHub</a>
         </section>
     </main>
 
