--- a/privacy.html
+++ b/privacy.html
@@ -124,7 +124,7 @@
         <p>
             Swayam Bhageria<br>
             Email: bhageriaswayam@gmail.com<br>
-            GitHub Issues Page: [Link to Your GitHub Repository Issues Page]
+            GitHub Issues Page: https://github.com/SwayamBhageria/Release-Reminder
         </p>
         <p><a href="index.html" class="back-link">&larr; Back to Home</a></p>
     </main>
